@@ -33,3 +33,7 @@
   
 * PX7:動画ロードするとカクつく
   →動画でコードのタイミングの問題なので、ちょっと考えます。
+  →多分出来ました。可変フレームレートの動画の対策は未だ(2016-08-19)
+
+* PX7:動画のスケーリングがおかしい
+  →後で直します(；´Д｀)
