@@ -1,4 +1,4 @@
-To Do (今後やろうと思うこと) 2016-04-09 K.Ohta
+To Do (今後やろうと思うこと) 2016-08-19 K.Ohta
   Sorry, this file is written in Japanese, not English X-)
 
 ※書かれてる順番は、優先度と＊全く関係ありません＊
@@ -33,7 +33,7 @@ To Do (今後やろうと思うこと) 2016-04-09 K.Ohta
 *できた>[Qt] キーコードを設定できるダイアログの制作
 *出来た>[Qt] Windowsビルドも、Qtでやる。可能なら、M$VCを排除する。
 *出来たっぽい,THX!武田さん>[VM] VMの外側から音量設定ができる構造を、全ての音声デバイスに実装する
-できたかなーできないかなー(´・ω・｀)>[VM][Qt] リセットした場合に固まることがあるのの解決
+*できたかなーできないかなー(´・ω・｀)>[VM][Qt] リセットした場合に固まることがあるのの解決
 *できた>[VM][FM7] マッピー等で、一定のタイミングで音楽が鳴らなくなることの修正
 
 *[FM77AV] ALUの描画ラインを使ってる時にCPUを喰い過ぎるのをどうにかする。
