@@ -61,8 +61,8 @@ target_link_libraries(CSPavio PUBLIC
 	  )
 
 set_target_properties(CSPavio PROPERTIES 
-			     SOVERSION 2.3.0
-			     VERSION 2.3.0
+			     SOVERSION 2.3.1
+			     VERSION 2.3.1
 			     )
 INSTALL(TARGETS CSPavio DESTINATION ${LIBCSP_INSTALL_DIR})
 endif()
