@@ -9,13 +9,13 @@
 <h1>Common Source Code Project</h1>
 <DIV ALIGN=RIGHT><FONT SIZE=2>
 Upstream Version: 2016-04-13<BR>
-Qt Port and FM7 series 2016-08-16<BR>
-libCSPavio 2.3.0<BR>
+Qt Port and FM7 series 2016-08-19<BR>
+libCSPavio 2.3.1<BR>
 libCSPgui 2.0.2<BR>
 libCSPosd 2.2.0<BR>
 libCSPemu_utils 2.0.0<BR>
 FFMPEG 3.1.1 + liblame 3.99 + libx264-148<BR>
-Build Version: 3f4c809912dc92cdeb34d8ecdebe0087aa7f37b3<BR>
+Build Version: 77380a77b25ca06965b912c84509e5c91085aeb1<BR>
 </FONT></DIV>
 <BR>
 <DIV ALIGN=RIGHT><FONT SIZE=3>
@@ -67,5 +67,5 @@ See also:<BR>
 </FONT>
 <hr>
 <address></address>
-<!-- hhmts start -->Last modified: Tue 16 August, 2016 02:43:25<!-- hhmts end -->
+<!-- hhmts start -->Last modified: Fri 19 August, 2016 23:14:39<!-- hhmts end -->
 </body> </html>
